tests/test_data/istio/expected/networking.istio.io/v1beta1/VirtualService/chartmuseum.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: chartmuseum
spec:
  gateways:
  - chartmuseum
  hosts:
    - chartmuseum-jx.mydomain.com
  http:
  - route:
    - destination:
        host: chartmuseum
      weight: 100
