tests/test_data/istio/expected/networking.istio.io/v1beta1/VirtualService/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hook
spec:
  gateways:
  - hook
  hosts:
    - hook-jx.mydomain.com
  http:
  - route:
    - destination:
        host: hook
      weight: 100
