tests/test_data/istio/expected/networking.istio.io/v1beta1/VirtualService/nexus.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nexus
spec:
  gateways:
  - nexus
  hosts:
    - nexus-jx.mydomain.com
  http:
  - route:
    - destination:
        host: nexus
      weight: 100
